<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    tools:context="com.ba2364.inclassassignment09_01.Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:lineSpacingExtra="2sp"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </ScrollView>

    <EditText
        android:id="@+id/messageText"
        style="@style/EditTextStyle"
        android:hint="@string/messagePrompt"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendButton"
            style="@style/ButtonStyle"
            android:onClick="sendText"
            android:text="@string/sendButton" />

        <Button
            android:id="@+id/signOutButton"
            style="@style/ButtonStyle"
            android:onClick="signOut"
            android:text="@string/signOutButton" />
    </LinearLayout>


</LinearLayout>